# spia

./: .gitignore  Cargo.toml  README.md  build.rs  sample_papers.json  toasty_data.json
src/: annotation_schema.json  main.rs  schema.rs  schema_impl.rs
